static/css/style.css
/* ... */
/*-- media queries --*/

@media screen and (min-width: 320px) {
    nav .brand-logo {
        font-size: 1.2rem;
    }

    .jumbotron-header {
        font-size: 2.2rem;
        padding: 5px;
    }

    .signup {
        font-size: 1.4rem;
        height: 45px;
        line-height: 45px;
    }

    .search-btn {
        height: 40px;
        line-height: 40px;
    }

    .view-full-dict a {
        font-size: 15px;
    }


    .edit-data button {
        font-size: 14px;
    }
}

@media screen and (min-width: 360px) {
    nav .brand-logo {
        font-size: 1.6rem;
    }

    main {
        padding-bottom: 4rem;
    }

    .site-info-heading {
        font-size: 2rem;
    }

    .jumbotron-header {
        font-size: 2.4rem;
        padding: 10px;
    }

    .maps-para {
        font-size: 1rem;
    }

    .register {
        height: 54px;
        line-height: 54px;
        font-size: 15px;
        padding: 0 28px;
    }
    
   .delete span,
   .edit span {
        display: inline;
    }

    .delete i,
    .edit i {
        display: none;
    }

    .edit-data button {
        font-size: 15px;
    }

    .info-container h6 {
        font-size: 1.1rem;
    }

    .info-container address {
        font-size: 0.9rem;
    }

    .social-media-links {
        margin-top: 0;
        font-size: 1.5rem;
    }
}

@media screen and (min-width: 411px) {
    nav .brand-logo {
        font-size: 1.8rem;
    }

    .site-info {
        width: 70%;
    }

    .maps-header,
    .login-heading,
    .registration-heading {
        font-size: 2.4rem;
    }

    .manage-users-heading,
    .add-user-heading,
    .not-found-heading {
        font-size: 3.2rem;
    }

    .registered-users {
        font-size: 2.2rem;
    }

    .brand-logo img {
        width: 80%;
    }
}

@media screen and (min-width: 540px) {
    nav .brand-logo {
        font-size: 2.6rem;
    }

    main {
        padding-bottom: 5rem;
    }

    .site-info {
        width: 60%;
    }

    .site-info-heading {
        font-size: 2.5rem;
    }

    .jumbotron-header {
        font-size: 3.6rem;
        padding: 15px;
    }

    .signup {
        font-size: 1.8rem;
        height: 55px;
        line-height: 55px;
    }

    .search-btn {
        height: 48px;
        line-height: 48px;
        padding: 0 30px;
    }

    .login-notice-wrapper {
        padding-bottom: 30px;
    }

    .maps-header,
    .login-heading,
    .registration-heading {
        font-size: 2.5rem;
    }

    .maps-para {
        font-size: 1.1rem;
    }

    .dictionary-heading {
        font-size: 4rem;
    }

    .full-dictionary {
        font-size: 3rem;
    }

    .upvote,
    .downvote {
        height: 30px;
        line-height: 30px;
        padding: 0 12px;
    }

    .upvote i,
    .downvote i {
        font-size: 1.2rem;
    }

    .manage-users-heading
    .add-user-heading,
    .not-found-heading {
        font-size: 3.6rem;
    }

    .registered-users {
        font-size: 2.6rem;
    }

    .info-container h6 {
        font-size: 1.15rem;
    }

    .brand-logo img {
        width: 65%;
    }
}

@media screen and (min-width: 601px) {
    .close {
        top: 3%;
        right: 3%;
    }
    
    .search-buttons {
        margin-top: 1.2rem;
    }

    .contributions-heading {
        font-size: 2.9rem;
    }

    .sign-in {
        margin: 30px;
    }

    .welcome-heading,
    .user-info-heading,
    .term-info-heading {
        font-size: 3.6rem;
    }

    .upvote,
    .downvote {
        height: 36px;
        line-height: 36px;
        padding: 0 16px;
    }

    .upvote i,
    .downvote i {
        font-size: 1.3rem;
    }

    .cancel {
        float: right;
    }

    .delete-account {
        float: left;
    }

    .delete-user {
        margin-top: 0;
        margin-bottom: 0;
    }
    
    .brand-logo img {
        width: 90%;
        padding-top: 2.6rem;
    }
}

@media screen and (min-width: 768px) {
    main {
        padding-bottom: 7.5rem;
    }

    .site-info {
        width: 50%;
    }

    .site-info-heading {
        font-size: 2.7rem;
    }

    .jumbotron-header {
        font-size: 5rem;
        padding: 20px;
    }

    .signup {
        font-size: 2rem;
        height: 65px;
        line-height: 65px;
    }

    .search-btn {
        font-size: 1.3rem;
        height: 54px;
        line-height: 54px;
        padding: 0 28px;
    }

    .search-buttons button {
        margin: 0 10px;
    }

    .contributions-heading {
        font-size: 3.2rem;
    }

    .dictionary-heading {
        font-size: 4.5rem;
    }

    .welcome-heading,
    .user-info-heading,
    .term-info-heading {
        font-size: 4.2rem;
    }

    .manage-users-heading,
    .add-user-heading,
    .not-found-heading {
        font-size: 4rem;
    }

    .registered-users {
        font-size: 2.8rem;
    }

    .info-container h6 {
        padding-top: 0.7rem;
    }

    .info-container address {
        font-size: 1rem;
    }

    .social-media-links {
        margin-top: 0;
        font-size: 1.6rem;
    }

    .login-heading,
    .registration-heading {
        font-size: 3.2rem;
    }
    
    .sign-in,
    .registration,
    .add-definition,
    .edit-data,
    .update-profile,
    .admin-add-user {
        margin: 30px 40px;
    }

    .sign-in .input-field .prefix,
    .registration .input-field .prefix {
        font-size: 2rem;
        top: 0.5rem;
    }

    .delete-user {
        text-align: right;
    }

    .brand-logo img {
        width: 100%;
    }
}
/* ... */

